Fixed xs-screen spacing and col background opacity

--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,32 @@
-html {
+html,
+body {
   height: 100%;
 }
 
 body {
   background-image: url("/media/image.png");
-  max-height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position-x: right;
   background-color: #f8f8f6;
 }
 
-h1 {
-  background-color: white;
-}
 h1,
 h2 {
   font-family: "Cormorant Garamond", serif;
-  font-size: 6vw;
   font-weight: bold;
 }
 h3,
 h5 {
   font-family: "Cormorant Garamond", serif;
   font-weight: bold;
+}
+h1 {
+  background-color: white;
+  font-size: 10vw;
+}
+h2 {
+  font-size: 7vw;
 }
 hr {
   background-color: cadetblue;
@@ -49,6 +52,7 @@ h6 {
 .bg {
   background-color: rgb(248, 248, 246, 0.7);
 }
+
 .hero {
   margin-top: 300px;
 }
@@ -65,17 +69,14 @@ h6 {
 }
 
 @media (max-width: 576px) {
-  h1 {
-    font-size: 50px;
-  }
-  h2 {
-    font-size: 35px;
-  }
   .sm-bg {
     background-color: white;
   }
   .row .bg {
     background-color: rgb(248, 248, 246, 0);
+  }
+  .hero {
+    margin-top: 42vh;
   }
   .hero,
   .fixed-top .bg {
